Class Connection provides basic IO caching for sockets, but does not split streams into separate command. This task will be done by derived classes. Connection seems to be IPv6-ready.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,5 @@
 INCLUDES = 
 METASOURCES = AUTO
 bin_PROGRAMS = irc2dc
-irc2dc_SOURCES = main.cpp
+irc2dc_SOURCES = connection.cpp main.cpp
+noinst_HEADERS = connection.h
