--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 INCLUDES = 
 METASOURCES = AUTO
 bin_PROGRAMS = irc2dc
-irc2dc_SOURCES = connection.cpp dcconnection.cpp main.cpp
-noinst_HEADERS = connection.h dcconnection.h
+irc2dc_SOURCES = connection.cpp dcconnection.cpp ircconnection.cpp main.cpp
+noinst_HEADERS = connection.h dcconnection.h ircconnection.h
