Added config-storing classes

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,7 @@
 INCLUDES = 
 METASOURCES = AUTO
 bin_PROGRAMS = irc2dc
-irc2dc_SOURCES = connection.cpp dcconnection.cpp ircconnection.cpp main.cpp
-noinst_HEADERS = connection.h dcconnection.h ircconnection.h
+irc2dc_SOURCES = config.cpp connection.cpp dcconfig.cpp dcconnection.cpp \
+	ircconfig.cpp ircconnection.cpp main.cpp
+noinst_HEADERS = config.h connection.h dcconfig.h dcconnection.h ircconfig.h \
+	ircconnection.h
