Added class IRCClient.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,9 @@ bin_PROGRAMS = irc2dc
 irc2dc_SOURCES = config.cpp connection.cpp dcclient.cpp dcconfig.cpp \
 	dcconnection.cpp ircconfig.cpp ircconnection.cpp main.cpp
 noinst_HEADERS = config.h connection.h dcclient.h dcconfig.h dcconnection.h \
-	ircconfig.h ircconnection.h
-noinst_PROGRAMS = dctest
+	ircclient.h ircconfig.h ircconnection.h
+noinst_PROGRAMS = dctest irctest
 dctest_SOURCES = connection.cpp dcclient.cpp dcconfig.cpp dcconnection.cpp \
 	dctest.cpp
+irctest_SOURCES = connection.cpp ircclient.cpp ircconfig.cpp ircconnection.cpp \
+	irctest.cpp
