Class Translator provides checking and translation of messages.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,9 +2,9 @@ INCLUDES =
 METASOURCES = AUTO
 bin_PROGRAMS = irc2dc
 irc2dc_SOURCES = config.cpp connection.cpp dcclient.cpp dcconfig.cpp \
-	dcconnection.cpp ircconfig.cpp ircconnection.cpp main.cpp
+	dcconnection.cpp ircconfig.cpp ircconnection.cpp main.cpp translator.cpp
 noinst_HEADERS = config.h connection.h dcclient.h dcconfig.h dcconnection.h \
-	ircclient.h ircconfig.h ircconnection.h
+	ircclient.h ircconfig.h ircconnection.h translator.h
 noinst_PROGRAMS = dctest irctest
 dctest_SOURCES = connection.cpp dcclient.cpp dcconfig.cpp dcconnection.cpp \
 	dctest.cpp
